<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".spotreport.SpotReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:gravity="top"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/locationSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="50"
            android:entries="@array/spot_report_location_source_list" />

        <Spinner
            android:id="@+id/reportType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="50"
            android:entries="@array/spot_report_feature_type_list"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aidLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="78"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/closureActLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_action" />

            <Spinner
                android:id="@+id/closureAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spot_report_action_items" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/closureRefLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_id" />

            <Spinner
                android:id="@+id/closureReference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aidLatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/aidLatitude"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_latitude" />

            <EditText
                android:id="@+id/aidLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/aidLonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/aidLongitude"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_longitude" />

            <EditText
                android:id="@+id/aidLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aidRadiusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/aidRadiusNum"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_radius" />

            <EditText
                android:id="@+id/aidRadiusNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:importantForAutofill="no"
                android:inputType="number" />

            <TextView
                android:id="@+id/aidFeetLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/aidRadiusValue"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_ft" />

            <SeekBar
                android:id="@+id/aidRadiusValue"
                style="@android:style/Widget.Material.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:max="1000"
                android:min="0"
                android:progress="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aidTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/aidType"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_aid_type" />

            <Spinner
                android:id="@+id/aidType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spot_report_aid_types" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aidNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/aidNum"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_aid_num" />

            <EditText
                android:id="@+id/aidNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:importantForAutofill="no"
                android:inputType="number" />

            <TextView
                android:id="@+id/aidUrgencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/aidUrgency"
                android:paddingHorizontal="5dp"
                android:text="@string/spot_report_aid_urgency" />

            <Spinner
                android:id="@+id/aidUrgency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spot_report_aid_urgency_value"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/aidDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|top"
                android:hint="@string/spot_report_aid_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/aidReporter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/spot_report_aid_reporter"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp">

        <Button
            android:id="@+id/submitReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|top"
            android:text="@string/spot_submit_report_button"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>