<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SpotReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/locationSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:entries="@array/spot_report_location_source_list" />

        <Spinner
            android:id="@+id/reportType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:entries="@array/spot_report_feature_type_list"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageCaptureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/spot_name_description"
            android:labelFor="@id/reportName"
            android:paddingHorizontal="5dp"
            android:text="@string/spot_name_field" />

        <EditText
            android:id="@+id/reportName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:singleLine="true" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/description"
            android:paddingHorizontal="5dp"
            android:text="@string/spot_description_field" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="center"
            android:src="@android:drawable/screen_background_light"
            android:visibility="visible" />

        <Button
            android:id="@+id/captureImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/spot_take_image_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp">

        <Button
            android:id="@+id/submitReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|top"
            android:text="@string/spot_submit_report_button"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>